# GNM

./: README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-shape-linux.yml  ci-shape-macos.yml  ci-shape-windows.yml  ci-windows.yml  lint.yml  reusable-shape-test.yml
gnm/shape/: README.md  environment.yml  gnm_base.py  gnm_base_test.py  gnm_data_loader.py  gnm_data_schema.py  gnm_jax.py  gnm_jax_test.py  gnm_jupyter_viewer.py  gnm_landmarks.py  gnm_landmarks_test.py  gnm_numpy.py  gnm_numpy_test.py  gnm_pytorch.py  gnm_pytorch_test.py  gnm_tensorflow.py  gnm_tensorflow_test.py  gnm_utils.py  gnm_utils_test.py  pyproject.toml  run_all_tests.py
gnm/shape/data/landmarks/: head_sparse_68.txt
gnm/shape/data/versions/: gnm_specs.py
gnm/shape/demos/: gnm_head_demo.ipynb
gnm/shape/demos/web/: README.md  index.html  main.js
gnm/shape/demos/web/teaser/: teaser.webm
gnm/shape/demos/web/tools/: export_gnm_web.py  reference_case.json
gnm/shape/visualization/: camera_conversions_test.py  gnm_pyrender.py  render_gnm.py  render_gnm_test.py  vertex_colors.py  vertex_colors_test.py
