# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnm-shape"
version = "3.0.0"
description = "GNM Shape Library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [    
    "absl-py",
    "etils",
    "imageio",
    "immutabledict",
    "importlib_resources",
    "ipywidgets",
    "notebook",
    "numpy",    
    "opencv-python",
    "opt-einsum",
    "rtree",
    "scipy",
    "tensorflow",
    "tqdm",
    "trimesh",
    "typeguard",    
]

[project.optional-dependencies]
jax = [
    "jax",
    "jaxtyping",
]
pytorch = [
    "torch",
]
all = [
    "gnm-shape[jax,pytorch]",
]
dev = [
    "pytest",
    "pylint",
    "mediapy",
    "tensorflow-graphics",
]

[tool.setuptools]
packages = [
    "gnm.shape",
    "gnm.shape.fitting_utils",
    "gnm.shape.visualization",
]
package-dir = {"gnm.shape" = "."}

[tool.setuptools.package-data]
"gnm.shape" = [
    "data/**/*.npz",
    "data/**/*.png",
    "data/**/*.jpg",
    "data/**/*.md",
    "data/**/*.h5",
    "assets/**/*",
]